cifex/source/java/ch/systemsx/cisd/cifex/public/css/cifex.css
body, div, td, table td, select {
    font-family: verdana, tahoma, helvetica;
    font-size: 11px;
}

.cifex-main-page {
		margin: 10px;
}

.cifex-heading {
    font-weight: bold;
    color: white;
    background-color: #1e4e8f;
    padding: 3px;
}

.cifex-a {
    color: blue;
    text-decoration: underline;
    cursor: pointer;
    cursor: hand;
}

.cifex-light-div {
    color: gray;
    display:inline;
}

.cifex-font-huge {
    font-size: 16px;
}

.cifex-ul{
	style=list-style-type:disc;
}

.cifex-login-widget {
    border: 1px solid #B5B8C8;
    padding-bottom: 7px;
    padding-right: 7px;
}

.cifex-welcome-warning {
    margin-top: 100px;
    font-size: 14px;
    color: red;
}

.cifex-login-header {
  position: absolute;
  width: 100%;
  top: 10;
  left: 10;
  right: 10;
}

/** Overwrite gxt styles */

